Update for Netlify

--- a/src/index.scss
+++ b/src/index.scss
@@ -32,7 +32,7 @@ pre {
     &:hover {
         background: #fff5;
         // color: darkblue;
-        // border-color: darkblue;
+        border-color: darkblue;
         transform: scale(1.1);
     }
     
