Cleanup / refactoring pass

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -6,7 +6,6 @@
 
 html,
 body {
-//   overflow-y: hidden;
   font-family: sans-serif;
 }
 
