--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@ $button-size: 44px;
 $button-border-width: 3px;
 
 $embed-button-color: #555360;
-$embed-button-emphasized-color: darken(#29abe2, 5);
+$embed-button-emphasized-color: #222;
 
 html,
 body {
