Add custom HL.JS style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+@import 'embed.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
