--- a/src/styles/partials/scrollbar.scss
+++ b/src/styles/partials/scrollbar.scss
@@ -1,18 +1,18 @@
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   background-color: #fff;
   width: 16px;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: #fff;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
   border: 4px solid #fff;
 }
 
-body::-webkit-scrollbar-button {
+::-webkit-scrollbar-button {
   display: none;
 }
