Checkpoint: right-hand toolbar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,11 @@ body {
   font-family: 'Nunito';
 }
 
+.toolbar {
+  background-color: #404040;
+  color: white;
+}
+
 .output {
   background-color: #2a2a2a;
   color: white;
