Enable custom scrollbars

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,7 @@
 @tailwind utilities;
 
 @import 'partials/variables';
+@import 'partials/scrollbar.scss';
 @import 'partials/hljs';
 
 @import 'landingPage';
