--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -122,3 +122,14 @@ body {
     font-weight: 100;
   }
 }
+
+// "Read more" gradual fade effect
+.partial-view {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 40px;
+  background: linear-gradient(to bottom, #0000, #0005);
+  z-index: 1000;
+}
