--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -131,5 +131,6 @@ body {
   bottom: 0;
   height: 40px;
   background: linear-gradient(to bottom, #0000, #0005);
+  pointer-events: none;
   z-index: 1000;
 }
